webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
.article-page {
  &__content {
    word-break: break-word;
  }

  &__image {
    margin-bottom: 24px;
    text-align: center;

    img {
      width: auto;
      max-width: 100%;
      height: auto;
    }
  }

  &__hero {
    width: 100%;
    height: 440px;

    picture,
    img {
      display: block;
      height: inherit;
    }

    img {
      width: 100%;
      object-fit: cover;
    }
  }

  .article-content-wrapper {
    img {
      max-width: 100%;
      height: auto;
    }
  }

  &__title {
    margin-bottom: 24px;
  }

  &__description {
    margin-bottom: 24px;
    font-size: var(--base-font-size-large);

    img {
      max-width: 100%;
      height: auto;
    }
  }
}

media {
  width: 100%;
  display: block;
  text-align: center;
  picture {
    display: inline-block;
    margin-left: auto;
  }
  &.align-center,
  &.align-left,
  &.align-right {
    float: none;
  }
  &.align-right {
    text-align: right;
  }
  &.align-left {
     text-align: left;
   }
  &.align-center {
     text-align: center;
   }
}

.print-button {
  display: flex;
  align-items: center;
  padding-bottom: 30px;

  a {
    display: flex;
    text-decoration: none;
  }

  &__text {
    padding-left: 10px;
    font-weight: 700;
  }

  .icon--printer {
    width: 24px;
    height: 24px;
  }
}

.contextual-region {
  overflow: visible;
}

.undervi-box {
  display: -webkit-box; /* stylelint-disable-line */
  max-height: 300px;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-line-clamp: 11;
  -webkit-box-orient: vertical;

  &--read-more {
    display: inline-flex;
    padding-bottom: 15px;
    font-weight: 700;

    a {
      display: flex;
      color: var(--color-purple);
      cursor: pointer;
      text-underline-offset: 3px;
    }

    &::after {
      display: block;
      width: 8px;
      height: 8px;
      margin-top: 9px;
      margin-left: 6px;
      border-top: 2px solid var(--color-purple);
      border-right: 2px solid var(--color-purple);
      transform: rotate(45deg);
      content: "";
    }
  }
}

@media print {
  @page {
    size: a4;
    margin: 1.5cm; /* stylelint-disable-line */
  }

  body {
    background: #fff;
  }

  .facts-box,
  .facts-box * {
    display: inline-block;
    width: 100%;
    page-break-inside: avoid;
  }

  .facts-box {
    margin: 0;
    padding: 0 0 35px;
    box-shadow: none;
  }

  .facts-box__title {
    margin-top: 0;
    margin-bottom: 10px;
    padding: 5px 10px;
    font-weight: bold;
    font-size: var(--base-font-size-medium);
    word-break: break-word;
    background: none;
    background: var(--color-yellow);
  }

  .facts-box__inspiration-title {
    margin-bottom: 5px;
    padding-bottom: 0;
  }

  .facts-box__content {
    margin: 0;
    padding: 0;
    word-break: break-word;
  }

  .facts-box__content-item {
    margin-bottom: 10px;
  }

  .container,
  .section {
    padding: 0;
  }

  section,
  section > div,
  .layout,
  .section,
  .layout__region,
  .container,
  .article-page,
  .row {
    margin: 0;
    padding: 0;
    page-break-inside: avoid;
    break-inside: avoid;
  }

  /* stylelint-disable */
  #block-tabs,
  #block-pageheader,
  .status-messages,
  .article-page__hero,
  .article-page__related,
  .facts-box__button-below-wrapper,
  .print-button,
  .facts-box__inspiration-title:after,
  svg {
    display: none;
  }
  /* stylelint-enable */

  .layout__region {
    .paragraph {
      picture {
        display: none;
      }
    }
  }

  .article-content-sidebar,
  .article-content-wrapper {
    display: block;
    width: 100%;
  }

  .article-content-wrapper {
    margin-bottom: 35px;
  }

  .article-content-sidebar {
    margin-left: 0;
  }

  .undervi-box {
    display: block;
    max-height: none;
  }

  .undervi-box--read-more {
    display: none;
  }
}

p {
  &.align-right {
     text-align: right;
   }
  &.align-center {
     text-align: center;
   }
  &.align-right {
     text-align: left;
   }
}

.img-size {
  &--small {
     max-width: 30% !important;
   }
  &--medium {
     max-width: 70% !important;
   }
  &--large {
     max-width: 90% !important
   }
}

figure {
  text-align: center;
}

